--- a/package.json
+++ b/package.json
@@ -27,13 +27,19 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "@types/uuid": "^8.3.1",
     "axios": "^0.23.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "firebase": "^9.1.3",
     "firebase-admin": "^10.0.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
