--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/cookie-session": "^2.0.43",
     "@types/uuid": "^8.3.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie-session": "^1.4.0",
+    "jdenticon": "^3.1.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
